--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.password=zhaolu123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
+mybatis.configuration.mapUnderscoreToCamelCase=true
+mybatis.configuration.map-underscore-to-camel-case=true
+#pagehelper分页插件配置
+pagehelper.auto-dialect=mysql
+pagehelper.reasonable=true
+pagehelper.support-methods-arguments=true
+pagehelper.params=count=countSql
