--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8899
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=zhaolu123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
