--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 server.port=8899
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=zhaolu123
+#local db
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#spring.datasource.username=root
+#spring.datasource.password=zhaolu123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#remote db
+spring.datasource.url=jdbc:mysql://34.80.103.224:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+spring.datasource.username=icode
+spring.datasource.password=icode2019
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
