--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,10 @@ spring.datasource.url=jdbc:mysql://34.80.103.224:3306/icode?useUnicode=true&char
 spring.datasource.username=icode
 spring.datasource.password=icode2019
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#mybatis&&通用Mapper
+mybatis.type-aliases-package=com.bsty.icode.bean
+mapper.mappers=com.bsty.icode.tk.TkMapper
+mapper.identity=MYSQL
 #mybatis
 mybatis.mapper-locations=classpath:mapper/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
