--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.port=8899
 #spring.datasource.password=zhaolu123
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #remote db
-spring.datasource.url=jdbc:mysql://34.80.103.224:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#spring.datasource.url=jdbc:mysql://34.80.103.224:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://34.84.45.39:3306/icode?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
 spring.datasource.username=icode
 spring.datasource.password=icode2019
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
